gcc/testsuite/rust/rustc/ui/pattern/usefulness/issue-56379.rs
enum Foo {
    A(bool),
    B(bool),
    C(bool),
}

fn main() {
    match Foo::A(true) {
// { dg-error ".E0004." "" { target *-*-* } .-1 }
        Foo::A(true) => {}
        Foo::B(true) => {}
        Foo::C(true) => {}
    }
}

